Bug fixes and some refactoring
- Fixed: when player disconnects, conversation progress will reset and cause some problems
(now it will be cleared)
- Fixed: Some text can not be correctly displayed in book gui
- Changed: non-text actions will now be executed immediately, instead of delaying
- New Config Node: actionInterval (the interval between text actions)
- some code cleanup and refactoring